# audiobook-tagger-refactored

./: ARCHITECTURE.md  README.md  SECURITY.md  package-lock.json
.github/workflows/: build.yml
src/: App.jsx  api.abs.test.js  api.claude-cli.test.js  api.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: abs_search.rs  audible.rs  claude_cli.rs  config.rs  cover_art.rs  custom_providers.rs  duplicate_finder.rs  file_rename.rs  file_tags.rs  folder_fixer.rs  genre_cache.rs  genres.rs  lib.rs  main.rs  normalize.rs  ollama.rs  progress.rs  scanner.rs  series.rs  smart_rename.rs  transcribe.rs  whisper.rs
src-tauri/src/commands/: abs.rs  chapters.rs  converter.rs  covers.rs  custom_providers.rs  duplicates.rs  folder_fixer.rs  genres.rs  mod.rs  pipeline.rs  scan.rs  smart_rename.rs  tags.rs
src-tauri/src/converter/: TESTING_CHECKLIST.md  analyzer.rs  chapters.rs  encoder.rs  ffmpeg.rs  mod.rs  types.rs
src-tauri/src/converter/tests/: integration.rs  mod.rs
src-tauri/src/pipeline/: context.rs  decide.rs  gather.rs  mod.rs  types.rs  validate.rs
src-tauri/src/scanner/: collector.rs  mod.rs  processor.rs  types.rs
src/components/: ABSPushModal.jsx  BulkCoverAssignment.jsx  ChapterPreviewModal.jsx  CoverSearchModal.jsx  LogPanel.jsx  OnboardingWizard.jsx  RescanModal.jsx  UndoToast.jsx  WritePreviewModal.jsx
src/components/scanner/: ActionBar.jsx  BookList.jsx  MetadataPanel.jsx  ProgressBar.jsx
src/hooks/: useBatchOperations.js  useClassifyHandlers.js  useEnrichmentHandlers.js  useFileSelection.js  useGroupSelection.js  useMetadataHandlers.js  useScan.js
src/lib/: logger.js  platform.js  prompts.js  proxy.js  proxy.test.js
src/pages/: ConvertPage.jsx  DuplicateFinderPage.jsx  FolderFixerPage.jsx  ScannerPage.jsx  SettingsPage.jsx  SmartRenamePage.jsx
