[package]
name = "audiobook-tagger-v2"
version = "2.0.0"
description = "Audiobook metadata manager — desktop edition"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
regex = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
libc = "0.2"
tempfile = "3"
